--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -19,23 +19,75 @@
     </nav>
   </section>
 
-  <section class="h-full grow bg-gray-50 p-20">
+  <section class="h-full grow bg-gray-50">
 
+
+    <div class="md:flex md:items-center md:justify-between md:space-x-5 bg-white p-10 border-b border-gray-100">
+      <div class="flex items-start space-x-5">
+        <div class="flex-shrink-0">
+          <div class="relative">
+            <img class="h-16 w-16 rounded-full" src="https://images.unsplash.com/photo-1463453091185-61582044d556?ixlib=rb-=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=8&w=1024&h=1024&q=80" alt="">
+            <span class="absolute inset-0 rounded-full shadow-inner" aria-hidden="true"></span>
+          </div>
+        </div>
+        <!--
+          Use vertical padding to simulate center alignment when both lines of text are one line,
+          but preserve the same layout if the text wraps without making the image jump around.
+        -->
+        <div class="">
+          <h1 class="text-3xl font-bold text-gray-900"><%= @category.name %></h1>
+          <p class="text-md font-medium text-gray-600 mt-1"><%= @category.description %></p>
+        </div>
+      </div>
+
+    </div>
+
+
+
+    <div class="relative isolate overflow-hidden bg-gray-900 px-6 py-20 sm:py-20 lg:px-8 hidden">
+      <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&crop=focalpoint&fp-y=.8&w=2830&h=1500&q=80&blend=111827&sat=-100&exp=15&blend-mode=multiply" alt="" class="absolute inset-0 -z-10 h-full w-full object-cover">
+      <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
+        <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+      </div>
+      <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
+        <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+      </div>
+      <div class="mx-auto max-w-2xl text-center">
+        <h2 class="text-4xl font-bold tracking-tight text-white sm:text-6xl"><%= @category.name %></h2>
+        <p class="mt-6 text-lg leading-8 text-gray-300"><%= @category.description %></p>
+      </div>
+    </div>
+
+    <div class="p-20">
     <% @category.products.each do |product| %>
       <div class="card w-full mb-8 border border-gray-100">
-        <div class="flex">
-          <div class="w-1/2 p-8">
+        <div class="flex items-stretch">
+          <div class="w-2/3 p-8">
             <h1 class="text-2xl font-bold tracking-tight text-gray-900 sm:text-2xl"><%= product.name %></h1>
             <p class="text-sm font-semibold text-orange-400"><%= product.description %></p>
+
+
+            <div class="mt-8 hidden">
+              <div class="flex space-x-2">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-gray-400">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z" />
+                </svg>
+                <h3 class="text-sm font-semibold text-gray-900">Infos</h3>
+              </div>
+              <p class="text-sm text-gray-500 mt-2 font-medium leading-6"><%= product.infos %></p>
+            </div>
+
+
           </div>
-          <div class="w-1/2">
-            <div class="w-full min-h-40 bg-slate-100"></div>
+          <div class="w-1/3">
+            <div class="w-full min-h-60 h-full bg-gray-100 flex items-center justify-center grow">
+              <p class="text-gray-400 font-medium">Image here</p>
+            </div>
           </div>
         </div>
 
         <div class="border-t border-b border-gray-100 flex w-full">
-          <div class="w-1/2 p-8">
-
+          <div class="w-1/3 p-8">
             <div class="flex space-x-2">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-gray-400">
                 <path stroke-linecap="round" stroke-linejoin="round" d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z" />
@@ -45,8 +97,55 @@
             <p class="text-sm text-gray-500 mt-4 font-medium leading-6"><%= product.infos %></p>
           </div>
 
-          <div class="w-1/2 p-8 border-l border-gray-100">
+          <div class="w-1/3 p-8 border-l border-gray-100">
+            <div class="flex space-x-2">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-gray-400">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M4.098 19.902a3.75 3.75 0 0 0 5.304 0l6.401-6.402M6.75 21A3.75 3.75 0 0 1 3 17.25V4.125C3 3.504 3.504 3 4.125 3h5.25c.621 0 1.125.504 1.125 1.125v4.072M6.75 21a3.75 3.75 0 0 0 3.75-3.75V8.197M6.75 21h13.125c.621 0 1.125-.504 1.125-1.125v-5.25c0-.621-.504-1.125-1.125-1.125h-4.072M10.5 8.197l2.88-2.88c.438-.439 1.15-.439 1.59 0l3.712 3.713c.44.44.44 1.152 0 1.59l-2.879 2.88M6.75 17.25h.008v.008H6.75v-.008Z" />
+              </svg>
 
+              <h3 class="text-sm font-semibold text-gray-900">Coloris</h3>
+            </div>
+
+
+            <div>
+              <fieldset class="mt-4">
+                <legend class="sr-only">Choose a color</legend>
+                <div class="flex items-center space-x-3">
+                  <!--
+                    Active and Checked: "ring ring-offset-1"
+                    Not Active and Checked: "ring-2"
+                  -->
+                  <label class="relative -m-0.5 flex cursor-pointer items-center justify-center rounded-full p-0.5 focus:outline-none ring-gray-400">
+                    <input type="radio" name="color-choice" value="White" class="sr-only" aria-labelledby="color-choice-0-label">
+                    <span id="color-choice-0-label" class="sr-only">White</span>
+                    <span aria-hidden="true" class="h-8 w-8 bg-white rounded-full border border-black border-opacity-10"></span>
+                  </label>
+                  <!--
+                    Active and Checked: "ring ring-offset-1"
+                    Not Active and Checked: "ring-2"
+                  -->
+                  <label class="relative -m-0.5 flex cursor-pointer items-center justify-center rounded-full p-0.5 focus:outline-none ring-gray-400">
+                    <input type="radio" name="color-choice" value="Gray" class="sr-only" aria-labelledby="color-choice-1-label">
+                    <span id="color-choice-1-label" class="sr-only">Gray</span>
+                    <span aria-hidden="true" class="h-8 w-8 bg-gray-200 rounded-full border border-black border-opacity-10"></span>
+                  </label>
+                  <!--
+                    Active and Checked: "ring ring-offset-1"
+                    Not Active and Checked: "ring-2"
+                  -->
+                  <label class="relative -m-0.5 flex cursor-pointer items-center justify-center rounded-full p-0.5 focus:outline-none ring-gray-900">
+                    <input type="radio" name="color-choice" value="Black" class="sr-only" aria-labelledby="color-choice-2-label">
+                    <span id="color-choice-2-label" class="sr-only">Black</span>
+                    <span aria-hidden="true" class="h-8 w-8 bg-gray-900 rounded-full border border-black border-opacity-10"></span>
+                  </label>
+                </div>
+              </fieldset>
+            </div>
+
+
+          </div>
+
+          <div class="w-1/3 p-8 border-l border-gray-100">
             <div class="flex space-x-2">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-gray-400">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75a4.5 4.5 0 0 1-4.884 4.484c-1.076-.091-2.264.071-2.95.904l-7.152 8.684a2.548 2.548 0 1 1-3.586-3.586l8.684-7.152c.833-.686.995-1.874.904-2.95a4.5 4.5 0 0 1 6.336-4.486l-3.276 3.276a3.004 3.004 0 0 0 2.25 2.25l3.276-3.276c.256.565.398 1.192.398 1.852Z" />
@@ -90,9 +189,9 @@
           </div>
         </div>
 
-
-
       </div>
     <% end %>
+    </div>
+
   </section>
 </div>
