--- a/app/components/navbar_component.html.erb
+++ b/app/components/navbar_component.html.erb
@@ -3,7 +3,7 @@
     <div class="flex h-16 justify-between">
       <div class="flex">
         <div class="flex flex-shrink-0 items-center">
-          <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
+          <%= inline_svg_tag("logos/ads-without-text.svg") %>
         </div>
         <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
           <!-- Current: "border-indigo-500 text-gray-900", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
