--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full min-h-screen flex relative">
-  <section class="h-screen w-60 sticky top-16 px-5 py-4 border-r border-gray-100">
+  <section class="h-screen w-60 sticky top-16 px-5 py-4 border-r border-gray-100 hidden">
     <nav class="flex flex-1 flex-col sidenav" aria-label="Sidebar">
       <ul role="list" class="flex flex-1 flex-col gap-y-7">
         <li>
@@ -21,19 +21,14 @@
 
   <section class="h-full grow bg-gray-50">
 
-
     <div class="md:flex md:items-center md:justify-between md:space-x-5 bg-white p-10 border-b border-gray-100">
       <div class="flex items-start space-x-5">
         <div class="flex-shrink-0">
-          <div class="relative">
+          <div class="relative hidden">
             <img class="h-16 w-16 rounded-full" src="https://images.unsplash.com/photo-1463453091185-61582044d556?ixlib=rb-=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=8&w=1024&h=1024&q=80" alt="">
             <span class="absolute inset-0 rounded-full shadow-inner" aria-hidden="true"></span>
           </div>
         </div>
-        <!--
-          Use vertical padding to simulate center alignment when both lines of text are one line,
-          but preserve the same layout if the text wraps without making the image jump around.
-        -->
         <div class="">
           <h1 class="text-3xl font-bold text-gray-900"><%= @category.name %></h1>
           <p class="text-md font-medium text-gray-600 mt-1"><%= @category.description %></p>
@@ -42,7 +37,7 @@
 
     </div>
 
-
+    <%= render BreadcrumbComponent.new(breadcrumbs) %>
 
     <div class="relative isolate overflow-hidden bg-gray-900 px-6 py-20 sm:py-20 lg:px-8 hidden">
       <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&crop=focalpoint&fp-y=.8&w=2830&h=1500&q=80&blend=111827&sat=-100&exp=15&blend-mode=multiply" alt="" class="absolute inset-0 -z-10 h-full w-full object-cover">
@@ -58,146 +53,10 @@
       </div>
     </div>
 
-    <div class="p-20">
-    <% @category.products.each do |product| %>
+    <div class="bg-white">
 
-      <% if product.images.attached? %>
-        <% product.images.each do |image| %>
-          <%= cl_image_tag(image.key, width: 300, height: 200, crop: :scale) %>
-        <% end %>
-      <% end %>
+      <%= render ProductlistComponent.new(@category.products) %>
 
-      <div class="card w-full mb-8 border border-gray-100">
-        <div class="flex items-stretch">
-          <div class="w-2/3 p-8">
-            <h1 class="text-2xl font-bold tracking-tight text-gray-900 sm:text-2xl"><%= product.name %></h1>
-            <p class="text-sm font-semibold text-orange-400"><%= product.description %></p>
-
-
-            <div class="mt-8 hidden">
-              <div class="flex space-x-2">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-gray-400">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z" />
-                </svg>
-                <h3 class="text-sm font-semibold text-gray-900">Infos</h3>
-              </div>
-              <p class="text-sm text-gray-500 mt-2 font-medium leading-6"><%= product.infos %></p>
-            </div>
-
-
-          </div>
-          <div class="w-1/3">
-            <div class="w-full min-h-60 h-full bg-gray-100 flex items-center justify-center grow">
-              <p class="text-gray-400 font-medium">Image here</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="border-t border-b border-gray-100 flex w-full">
-          <div class="w-1/3 p-8">
-            <div class="flex space-x-2">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-gray-400">
-                <path stroke-linecap="round" stroke-linejoin="round" d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z" />
-              </svg>
-              <h3 class="text-sm font-semibold text-gray-900">Infos</h3>
-            </div>
-            <p class="text-sm text-gray-500 mt-4 font-medium leading-6"><%= product.infos %></p>
-          </div>
-
-          <div class="w-1/3 p-8 border-l border-gray-100">
-            <div class="flex space-x-2">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-gray-400">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75a4.5 4.5 0 0 1-4.884 4.484c-1.076-.091-2.264.071-2.95.904l-7.152 8.684a2.548 2.548 0 1 1-3.586-3.586l8.684-7.152c.833-.686.995-1.874.904-2.95a4.5 4.5 0 0 1 6.336-4.486l-3.276 3.276a3.004 3.004 0 0 0 2.25 2.25l3.276-3.276c.256.565.398 1.192.398 1.852Z" />
-                <path stroke-linecap="round" stroke-linejoin="round" d="M4.867 19.125h.008v.008h-.008v-.008Z" />
-              </svg>
-              <h3 class="text-sm font-semibold text-gray-900">Options</h3>
-            </div>
-
-            <div class="prose prose-sm mt-4 text-gray-500">
-              <ul role="list">
-                <% product.options.each do |option| %>
-                  <li><%= option.content %></li>
-                <% end %>
-              </ul>
-            </div>
-          </div>
-
-           <div class="w-1/3 p-8 border-l border-gray-100">
-            <div class="flex space-x-2">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-gray-400">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M4.098 19.902a3.75 3.75 0 0 0 5.304 0l6.401-6.402M6.75 21A3.75 3.75 0 0 1 3 17.25V4.125C3 3.504 3.504 3 4.125 3h5.25c.621 0 1.125.504 1.125 1.125v4.072M6.75 21a3.75 3.75 0 0 0 3.75-3.75V8.197M6.75 21h13.125c.621 0 1.125-.504 1.125-1.125v-5.25c0-.621-.504-1.125-1.125-1.125h-4.072M10.5 8.197l2.88-2.88c.438-.439 1.15-.439 1.59 0l3.712 3.713c.44.44.44 1.152 0 1.59l-2.879 2.88M6.75 17.25h.008v.008H6.75v-.008Z" />
-              </svg>
-
-              <h3 class="text-sm font-semibold text-gray-900">Coloris</h3>
-            </div>
-
-
-            <div>
-              <fieldset class="mt-4">
-                <legend class="sr-only">Choose a color</legend>
-                <div class="flex items-center space-x-3">
-                  <!--
-                    Active and Checked: "ring ring-offset-1"
-                    Not Active and Checked: "ring-2"
-                  -->
-                  <label class="relative -m-0.5 flex cursor-pointer items-center justify-center rounded-full p-0.5 focus:outline-none ring-gray-400">
-                    <input type="radio" name="color-choice" value="White" class="sr-only" aria-labelledby="color-choice-0-label">
-                    <span id="color-choice-0-label" class="sr-only">White</span>
-                    <span aria-hidden="true" class="h-8 w-8 bg-white rounded-full border border-black border-opacity-10"></span>
-                  </label>
-                  <!--
-                    Active and Checked: "ring ring-offset-1"
-                    Not Active and Checked: "ring-2"
-                  -->
-                  <label class="relative -m-0.5 flex cursor-pointer items-center justify-center rounded-full p-0.5 focus:outline-none ring-gray-400">
-                    <input type="radio" name="color-choice" value="Gray" class="sr-only" aria-labelledby="color-choice-1-label">
-                    <span id="color-choice-1-label" class="sr-only">Gray</span>
-                    <span aria-hidden="true" class="h-8 w-8 bg-gray-200 rounded-full border border-black border-opacity-10"></span>
-                  </label>
-                  <!--
-                    Active and Checked: "ring ring-offset-1"
-                    Not Active and Checked: "ring-2"
-                  -->
-                  <label class="relative -m-0.5 flex cursor-pointer items-center justify-center rounded-full p-0.5 focus:outline-none ring-gray-900">
-                    <input type="radio" name="color-choice" value="Black" class="sr-only" aria-labelledby="color-choice-2-label">
-                    <span id="color-choice-2-label" class="sr-only">Black</span>
-                    <span aria-hidden="true" class="h-8 w-8 bg-gray-900 rounded-full border border-black border-opacity-10"></span>
-                  </label>
-                </div>
-              </fieldset>
-            </div>
-
-
-          </div>
-        </div>
-
-        <div class="py-4 px-8">
-          <div class="flex">
-            <div class="flex space-x-8">
-              <div class="flex items-center text-sm font-medium text-red-400">
-                <svg class="mr-2 h-8 w-8 flex-none" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 18.75a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 01-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 00-3.213-9.193 2.056 2.056 0 00-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 00-10.026 0 1.106 1.106 0 00-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12" />
-                </svg>
-                <p class="text-gray-700 font-medium text-lg">Sur mesure</p>
-              </div>
-              <div class="flex items-center text-sm font-medium text-green-500">
-                <svg class="mr-2 h-8 w-18 flex-none" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 01-1.043 3.296 3.745 3.745 0 01-3.296 1.043A3.745 3.745 0 0112 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 01-3.296-1.043 3.745 3.745 0 01-1.043-3.296A3.745 3.745 0 013 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 011.043-3.296 3.746 3.746 0 013.296-1.043A3.746 3.746 0 0112 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 013.296 1.043 3.746 3.746 0 011.043 3.296A3.745 3.745 0 0121 12z" />
-                </svg>
-                <p class="text-gray-700 font-medium text-lg"><%= "Garantie #{product.warranty} ans" %></p>
-              </div>
-              <div class="flex items-center text-sm font-medium text-gray-400">
-                <svg class="mr-2 h-6 w-6 flex-none" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 012.25-2.25h13.5A2.25 2.25 0 0121 7.5v11.25m-18 0A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75m-18 0v-7.5A2.25 2.25 0 015.25 9h13.5A2.25 2.25 0 0121 11.25v7.5" />
-                </svg>
-                <p class="text-gray-600 font-semibold">Devis gratuit</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    <% end %>
     </div>
 
   </section>
