--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,8 +18,15 @@
       <p class="mt-2 text-lg leading-8 text-gray-100"><%= @product.description %></p>
     </div>
   </div>
+  <div class="absolute bottom-0 right-0 p-4 pr-8 flex space-x-4 items-center">
+    <% if @product.motorist.present? %>
+      <%= inline_svg_tag("logos/#{@product.motorist.logo}.svg", class: "fill-white h-10 w-20 pt-2") %>
+    <% end %>
+    <% if @product.brand.present? %>
+      <%= inline_svg_tag("logos/#{@product.brand.logo}.svg", class: "fill-white h-14 w-22 pb-4") %>
+    <% end %>
+  </div>
 </div>
-
 
 <div class="card w-full">
   <div class="flex flex-col md:flex-row items-stretch">
@@ -153,3 +160,5 @@
   </div>
 
 </div>
+
+<%= render PhotoslistComponent.new(@product.images) %>
