--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -85,7 +85,7 @@
       </div>
     </div>
 
-      <div class="w-full md:w-1/3 p-8 border-l border-gray-100">
+    <div class="w-full md:w-1/3 p-8 border-l border-gray-100">
       <div class="flex space-x-2">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-gray-400">
           <path stroke-linecap="round" stroke-linejoin="round" d="M4.098 19.902a3.75 3.75 0 0 0 5.304 0l6.401-6.402M6.75 21A3.75 3.75 0 0 1 3 17.25V4.125C3 3.504 3.504 3 4.125 3h5.25c.621 0 1.125.504 1.125 1.125v4.072M6.75 21a3.75 3.75 0 0 0 3.75-3.75V8.197M6.75 21h13.125c.621 0 1.125-.504 1.125-1.125v-5.25c0-.621-.504-1.125-1.125-1.125h-4.072M10.5 8.197l2.88-2.88c.438-.439 1.15-.439 1.59 0l3.712 3.713c.44.44.44 1.152 0 1.59l-2.879 2.88M6.75 17.25h.008v.008H6.75v-.008Z" />
@@ -96,38 +96,7 @@
 
 
       <div>
-        <fieldset class="mt-4">
-          <legend class="sr-only">Choose a color</legend>
-          <div class="flex items-center space-x-3">
-            <!--
-              Active and Checked: "ring ring-offset-1"
-              Not Active and Checked: "ring-2"
-            -->
-            <label class="relative -m-0.5 flex cursor-pointer items-center justify-center rounded-full p-0.5 focus:outline-none ring-gray-400">
-              <input type="radio" name="color-choice" value="White" class="sr-only" aria-labelledby="color-choice-0-label">
-              <span id="color-choice-0-label" class="sr-only">White</span>
-              <span aria-hidden="true" class="h-8 w-8 bg-white rounded-full border border-black border-opacity-10"></span>
-            </label>
-            <!--
-              Active and Checked: "ring ring-offset-1"
-              Not Active and Checked: "ring-2"
-            -->
-            <label class="relative -m-0.5 flex cursor-pointer items-center justify-center rounded-full p-0.5 focus:outline-none ring-gray-400">
-              <input type="radio" name="color-choice" value="Gray" class="sr-only" aria-labelledby="color-choice-1-label">
-              <span id="color-choice-1-label" class="sr-only">Gray</span>
-              <span aria-hidden="true" class="h-8 w-8 bg-gray-200 rounded-full border border-black border-opacity-10"></span>
-            </label>
-            <!--
-              Active and Checked: "ring ring-offset-1"
-              Not Active and Checked: "ring-2"
-            -->
-            <label class="relative -m-0.5 flex cursor-pointer items-center justify-center rounded-full p-0.5 focus:outline-none ring-gray-900">
-              <input type="radio" name="color-choice" value="Black" class="sr-only" aria-labelledby="color-choice-2-label">
-              <span id="color-choice-2-label" class="sr-only">Black</span>
-              <span aria-hidden="true" class="h-8 w-8 bg-gray-900 rounded-full border border-black border-opacity-10"></span>
-            </label>
-          </div>
-        </fieldset>
+        <%= render RalslistComponent.new(@product.rals) %>
       </div>
 
 
