--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -34,6 +34,26 @@
   @apply text-orange-500 border-orange-400;
  }
 
- .card {
+.card {
   @apply rounded-lg bg-white;
- }
+}
+
+.button {
+  @apply block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600;
+}
+
+nav.admin-navbar a.active {
+  @apply bg-gray-50 text-indigo-600 flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold;
+}
+
+nav.admin-navbar a {
+  @apply text-gray-700 hover:text-indigo-600 hover:bg-gray-50 flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold;
+}
+
+nav.admin-navbar a.active svg {
+  @apply text-indigo-600;
+}
+
+nav.admin-navbar a:hover svg {
+  @apply text-indigo-600;
+}
