--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -5,40 +5,134 @@
     <%= f.input :name %>
     <%= f.input :description %>
     <% if @product.images.attached? %>
-      <div class="flex space-x-4">
-        <% @product.images.each do |image| %>
-          <%= cl_image_tag(image.key, crop: :scale, class: "w-20 h-20 rounded") %>
-          <%= f.hidden_field :images, multiple: true, value: image.signed_id %>
-        <% end %>
+
+
+
+
+      <div class="border-t">
+        <div class="text-md font-medium text-gray-800 my-4 pl-4">Photos</div>
+
+        <div class="flex border-t">
+
+          <ul role="list" class="p-12 w-3/4 grid grid-cols-2 gap-x-4 gap-y-8 sm:grid-cols-3 sm:gap-x-6 lg:grid-cols-6 xl:gap-x-8">
+            <% @product.images.each do |image| %>
+              <li class="relative" data-controller="image" data-image-signed-id-value="<%= image.signed_id %>">
+                <%= f.hidden_field :images, multiple: true, value: image.signed_id, data: { image_target: "hiddenField" } %>
+                <div class="group overflow-hidden rounded-lg bg-gray-100 focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 focus-within:ring-offset-gray-100">
+                  <%= cl_image_tag(image.key, crop: :scale, class: "pointer-events-none aspect-[10/7] object-cover group-hover:opacity-75") %>
+                </div>
+                <div class="mt-2">
+                  <p class="pointer-events-none truncate text-ellipsis text-[9px] font-semibold text-gray-900 border-b mb-2 pb-2 border-gray-100"><%= image.blob.filename %></p>
+
+                  <div class="flex justify-between items-center">
+                    <span class="inline-flex items-center rounded-md bg-purple-50 px-1.5 py-0.5 text-[9px] font-bold text-purple-700 ring-1 ring-inset ring-purple-700/10"><%= "#{(image.blob.byte_size.to_f / 1000000.0).round(1)} MB" %></span>
+                    <!-- Bouton de suppression -->
+                    <%= link_to "#", data: {action: "image#remove", turbo: false} do %>
+                      <div class="flex space-x-3 items-center">
+                        <%= inline_svg_tag("icons/trash.svg", class: "h-4 w-4 shrink-0 text-gray-600")%>
+                      </div>
+                    <% end %>
+                  </div>
+
+                </div>
+              </li>
+            <% end %>
+          </ul>
+
+          <div class="w-1/4 border-l flex flex-col items-center">
+
+            <div data-controller="upload" class="w-full">
+              <!-- Champ de fichier pour télécharger l'image -->
+              <%= f.file_field :images, direct_upload: true, multiple: true, data: { upload_target: "input", action: "change->upload#uploadFile" }, style: "display: none;" %>
+
+              <%= link_to "#", class: "text-blue-600 text-sm font-bold", data: { action: "upload#triggerFileInput" } do %>
+                <div class="bg-indigo-50 px-2 py-2 border-b border-indigo-100 text-xs font-semibold text-indigo-600 hover:bg-indigo-100 flex items-center w-full">
+                  <%= inline_svg_tag("icons/queue-list.svg", class: "h-3 w-3 shrink-0 text-indigo-500")%>
+                  <div class="ml-2">Add photos</div>
+                </div>
+              <% end %>
+
+              <div data-upload-target="preview" class="flex flex-col w-full items-center p-6"></div>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+
+
+    <% else %>
+      <div class="border-t">
+        <div class="text-md font-medium text-gray-800 my-4">Photos</div>
+
+        <div class="flex border-t">
+
+          <div class="w-3/4 p-12">
+
+            <div class="text-center flex flex-col items-center">
+              <%= inline_svg_tag("icons/exclamation-circle.svg", class: "h-6 w-6 shrink-0 text-red-500") %>
+              <h3 class="mt-2 text-sm font-semibold text-gray-900">0 images</h3>
+              <p class="mt-1 text-xs font-medium text-gray-400">Ajoutez des photos dans le menu à droite</p>
+            </div>
+
+          </div>
+
+          <div class="w-1/4 border-l flex flex-col items-center">
+
+            <div data-controller="upload" class="w-full">
+              <!-- Champ de fichier pour télécharger l'image -->
+              <%= f.file_field :images, direct_upload: true, multiple: true, data: { upload_target: "input", action: "change->upload#uploadFile" }, style: "display: none;" %>
+
+              <%= link_to "#", class: "text-blue-600 text-sm font-bold", data: { action: "upload#triggerFileInput" } do %>
+                <div class="bg-indigo-50 px-2 py-2 border-b border-indigo-100 text-xs font-semibold text-indigo-600 hover:bg-indigo-100 flex items-center w-full">
+                  <%= inline_svg_tag("icons/queue-list.svg", class: "h-3 w-3 shrink-0 text-indigo-500")%>
+                  <div class="ml-2">Add photos</div>
+                </div>
+              <% end %>
+
+              <div data-upload-target="preview" class="flex flex-col w-full items-center p-6"></div>
+
+            </div>
+
+          </div>
+
+        </div>
+
       </div>
     <% end %>
+
 
   </div>
 
 
   <div class="options">
-    <div>Options</div>
+    <div class="flex items-center space-x-3 border-y px-4 py-3">
+      <div class="text-sm font-medium text-slate-700">Options</div>
+      <span class="inline-flex items-center rounded bg-purple-50 px-2.5 py-1.5 text-[9px] font-bold text-purple-700 ring-1 ring-inset ring-purple-700/10"><%= "#{@product.options.size} Options" %></span>
+      <%= link_to admin_product_options_path(@product), data: { turbo_method: :post, turbo_stream: true } do %>
+        <div class="flex space-x-2 items-center">
+          <div class="text-xs text-gray-500 font-medium px-2 py-1 rounded border border-gray-200 hover:bg-gray-100">+ Ajouter</div>
+        </div>
+      <% end %>
+    </div>
 
     <div class="flex p-6 flex-wrap">
       <% @product.options.each_with_index do |option, index| %>
         <div class="w-1/5 p-4" id="option_<%= option.id %>">
           <div class="flex items-center space-x-3 justify-between">
             <div class="flex items-center">
-               <%= inline_svg_tag("icons/queue-list.svg", class: "h-4 w-4 shrink-0 text-gray-600")%>
-               <div class="ml-1 text-xs font-bold"><%= index + 1 %></div>
+              <%= inline_svg_tag("icons/queue-list.svg", class: "h-4 w-4 shrink-0 text-gray-600")%>
+              <div class="ml-1 text-xs font-bold"><%= index + 1 %></div>
             </div>
             <% if option.persisted? %>
-              <%= link_to admin_product_option_path(@product, option), method: :delete, data: { turbo_method: :delete, turbo_confirm: 'Are you sure?', turbo_stream: true }, remote: true do %>
+              <%= link_to admin_product_option_path(@product, option), method: :delete, data: { turbo_method: :delete, turbo_confirm: 'Are you sure ?', turbo_stream: true }, remote: true do %>
                 <div class="flex space-x-3 items-center">
                   <%= inline_svg_tag("icons/minus-circle.svg", class: "h-4 w-4 shrink-0 text-red-600")%>
                 </div>
               <% end %>
-            <% end %>
-
-            <%= link_to admin_product_options_path(@product), data: { turbo_method: :post, turbo_stream: true }, remote: true do %>
-              <div class="flex space-x-3 items-center">
-                <%= inline_svg_tag("icons/fire.svg", class: "h-4 w-4 shrink-0 text-lime-600")%>
-              </div>
             <% end %>
 
           </div>
@@ -46,9 +140,15 @@
           <%= f.fields_for :options, option do |option_fields| %>
             <%= option_fields.input :content, wrapper: :small_input, label: false %>
           <% end %>
+
+
         </div>
       <% end %>
     </div>
+
+
+
+
   </div>
 
 
@@ -65,11 +165,8 @@
 
 
 
-  <div>
-    <%= f.file_field :images, direct_upload: false, multiple: true %>
-    <div data-upload-target="progress" class="bordered p-3"></div>
-    <div data-upload-target="preview" class="flex space-x-3 w-full"></div>
-  </div>
+
+
 
   <% if @product.errors.any? %>
     <% @product.errors.each do |error| %>
